--- a/codigo.ipynb
+++ b/codigo.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "0a882369",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4     32  Masculino  28.880           0     Não    Norte   386.685520"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ebe27088",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "6468360b",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "df4bba44",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "a00bc78c",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "4046b628",
    "metadata": {},
    "outputs": [
@@ -988,7 +988,7 @@
     "- Se o valor-p for menor que um nível de significância pré-determinado (geralmente 0,05 ou 0,01), rejeitamos a hipótese nula (H0). \n",
     "- Se o valor-p for maior que o nível de significância, não temos evidências suficientes para rejeitar H0, e não podemos afirmar com confiança que as médias das duas amostras são diferentes.\n",
     "\n",
-    "Não irei entrar em detalhes sobre os calculos, mas com da função *ttest_ind()* do pacote stats, encontramos um p-valor = 8,27. Com um p-valor > 0,05 temos evidências para rejeitar H0. Ou seja, **o colaborador fumar realmente implica em um aumento no valor do plano de Saúde.**\n"
+    "Não irei entrar em detalhes sobre os calculos, mas com da função *ttest_ind()* do pacote stats, encontramos um $p-valor < 0,05$.  temos evidências para rejeitar H0. Ou seja, **o colaborador fumar realmente implica em um aumento no valor do plano de Saúde.**\n"
    ]
   },
   {
@@ -1026,6 +1026,65 @@
    "metadata": {},
    "source": [
     "### Variáveis Categóricas - IMC categórico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "92f777b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IMC_cat\n",
+       "Muito abaixo do peso     383.426570\n",
+       "Abaixo do peso           973.771851\n",
+       "Peso normal             1040.933771\n",
+       "Sobrepeso               1098.750989\n",
+       "Obesidade grau I        1441.967497\n",
+       "Obesidade grau II       1693.309615\n",
+       "Obesidade grau III      1700.277573\n",
+       "Name: Custo_Saude, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_imc = df2.groupby('IMC_cat')['Custo_Saude'].mean()\n",
+    "media_imc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43f97c36",
+   "metadata": {},
+   "source": [
+    "Vimos na correlação das variáveis numericas que o IMC tinha apenas 0.3 de correlação com o custo do plano de saúde, mas vale ver se transformar esses números do IMC em categóricos implica em alguma correlação. Para testar se há correlação neste cenário usaremos o teste ANOVA.\n",
+    "\n",
+    "O teste de análise de variância (ANOVA) é uma técnica estatística utilizada para comparar a média de três ou mais grupos independentes para determinar se existe alguma diferença significativa entre eles. \n",
+    "\n",
+    "Abaixo o custo médio do plano de saúde para cada categoria do IMC:\n",
+    "\n",
+    "- Muito abaixo do peso: `R$ 383,42`\n",
+    "- Abaixo do peso: `R$  973,77`\n",
+    "- Peso normal: `R$ 1040,93`\n",
+    "- Sobrepeso: `R$ 1098,75`\n",
+    "- Obesidade grau I: `R$ 1441,96`\n",
+    "- Obesidade grau II: `R$ 1693,30`\n",
+    "- Obesidade grau III: `R$ 1700,27`\n",
+    "\n",
+    "\n",
+    "As hipoteses do teste ANOVA são:\n",
+    "\n",
+    "1. Hipótese Nula (H0): As médias dos grupos são iguais, ou seja, não há diferença significativa nos custos de plano de saúde entre as categorias do IMC.\n",
+    "\n",
+    "2. Hipótese Alternativa (H1):Pelo menos uma das médias dos grupos é diferente, indicando que há uma diferença significativa nos custos de plano de saúde entre as categorias do IMC.\n",
+    "\n",
+    "Com a ajuda da função *anova_lm()* do pacote *statsmodels* encontramos um $PR(>F) < 0,05$. Ou seja, **o peso do colaborador realmente influencia no custo do plano de saúde**."
    ]
   },
   {
@@ -1103,9 +1162,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc1d8666",
+   "metadata": {},
+   "source": [
+    "### Variáveis Categóricas - Região"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "67aec171",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Região\n",
+       "Centro      1234.693738\n",
+       "Nordeste    1340.638452\n",
+       "Norte       1241.757537\n",
+       "Sudeste     1473.541144\n",
+       "Name: Custo_Saude, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_regiao = df2.groupby('Região')['Custo_Saude'].mean()\n",
+    "media_regiao"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "815940ac",
+   "metadata": {},
+   "source": [
+    "Ultilizaremos o mesmo teste ANOVA utilizado para ver a correlação entre o custo do plano de saúde e o IMC categórico.\n",
+    "\n",
+    "Abaixo o custo médio do plano de saúde para cada Região:\n",
+    "\n",
+    "- Centro: `R$ 1234,70`\n",
+    "- Nordeste: `R$ 1340,637`\n",
+    "- Norte: `R$ 1241,75`\n",
+    "- Sudeste: `R$ 1473,54`\n",
+    "\n",
+    "\n",
+    "As hipoteses do teste ANOVA são:\n",
+    "\n",
+    "1. Hipótese Nula (H0): As médias dos grupos são iguais, ou seja, não há diferença significativa nos custos de plano de saúde entre as Regiões.\n",
+    "\n",
+    "2. Hipótese Alternativa (H1):Pelo menos uma das médias dos grupos é diferente, indicando que há uma diferença significativa nos custos de plano de saúde entre as regiões.\n",
+    "\n",
+    "Com a ajuda da função *anova_lm()* do pacote *statsmodels* encontramos um $PR(>F) > 0,05$. Ou seja, **a região em que o colaborador vive NÃO influencia no custo do plano de saúde**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7dcdb2d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 sum_sq      df         F    PR(>F)\n",
+      "C(Região)  1.300760e+07     3.0  2.969627  0.030893\n",
+      "Residual   1.947735e+09  1334.0       NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ajustando o modelo linear usando a ANOVA\n",
+    "modelo1 = ols('Custo_Saude ~ C(Região)', data=df).fit()\n",
+    "\n",
+    "# Obtendo a tabela ANOVA\n",
+    "tabela_anova1 = sm.stats.anova_lm(modelo1, typ=2)\n",
+    "\n",
+    "# Realizando o teste de Tukey\n",
+    "tukey_result1 = pairwise_tukeyhsd(df['Custo_Saude'], df['Região'])\n",
+    "\n",
+    "# Exibindo os resultados\n",
+    "print(tabela_anova1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "153f0a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Multiple Comparison of Means - Tukey HSD, FWER=0.05    \n",
+      "===========================================================\n",
+      " group1   group2  meandiff p-adj    lower    upper   reject\n",
+      "-----------------------------------------------------------\n",
+      "  Centro Nordeste 105.9447 0.6792 -138.0678 349.9572  False\n",
+      "  Centro    Norte   7.0638 0.9999 -236.7607 250.8883  False\n",
+      "  Centro  Sudeste 238.8474 0.0477    1.6439  476.051   True\n",
+      "Nordeste    Norte -98.8809 0.7245 -342.8934 145.1316  False\n",
+      "Nordeste  Sudeste 132.9027 0.4745 -104.4942 370.2996  False\n",
+      "   Norte  Sudeste 231.7836 0.0583   -5.4199 468.9872  False\n",
+      "-----------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tukey_result1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2245d7f7",
+   "id": "addc2d49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1113,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1fb7ed",
+   "id": "4e4b7113",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1121,7 +1297,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a9b110",
+   "id": "20908b49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da830c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18364737",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc89aca5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b544dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a35f74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f3bd21",
    "metadata": {},
    "outputs": [],
    "source": []
